# getxargs

./: CMakeLists.txt  Makefile.am  getxargs.spec.in  pkginfo.in
src/: .cvsignore  Makefile  Makefile.am  Makefile.in  Session.vim  arglist.cpp  arglist.h  argproc.cpp  argument.cpp  argument.h  boolean.cpp  character.cpp  config.h  config.h.in  double.cpp  function.cpp  integer.cpp  string.cpp  tags.cpp
test/: .cvsignore  Makefile  Makefile.am  Makefile.in  example.cpp  example1.cpp
