lib_LTLIBRARIES = libgetxargs.la

libgetxargs_la_SOURCES = \
	arglist.cpp	\
	argproc.cpp	\
	argument.cpp	\
	boolean.cpp	\
	character.cpp	\
	double.cpp	\
	function.cpp	\
	integer.cpp	\
	string.cpp	\
	tags.cpp

pkgincludedir = $(includedir)/getxargs

libgetxargs_la_LDFLAGS = -version-info 4:2:1

pkginclude_HEADERS = arglist.h argument.h

